--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "~2.7.1",
     "body-parser": "~1.13.3",
     "mongoose": "~4.1.0",
-    "express": "~4.13.2"
+    "express": "~4.13.2",
+    "mongoose-seed": "~0.1.5"
   }
 }
