--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "~1.13.3",
     "mongoose": "~4.1.0",
     "express": "~4.13.2",
-    "mongoose-seed": "~0.1.5"
+    "mongoose-seed": "~0.1.5",
+    "cron": "~1.0.9"
   }
 }
